--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <i class="fa-solid fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
-          <p>UI/UX Designer</p>
-          <h1>Hi, I am <span>Lohit</span> <br />Jhajhria from India</h1>
+          <p>Web Developer</p>
+          <h1>Hi, I am <span>Lohit</span> <br />Jhajhria</h1>
         </div>
       </div>
     </div>
@@ -38,7 +38,7 @@
       <div class="container">
         <div class="row">
           <div class="about-col-1">
-            <img src="images/user.png" />
+            <img src="images/Lohit.jpeg" />
           </div>
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
