--- a/index.html
+++ b/index.html
@@ -197,9 +197,11 @@
               <a href="https://facebook.com/"
                 ><i class="fa-brands fa-facebook"></i
               ></a>
-              <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-              <a href=""><i class="fa-brands fa-instagram"></i></a>
-              <a href=""><i class="fa-brands fa-linkedin"></i></a>
+              <a href="https://twitter.com/"><i class="fa-brands fa-x-twitter"></i></a>
+              <a href="https://github.com/Lohit1509"><i class="fa-brands fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/lohit-jhajhria/"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
             </div>
             <a href="images/my-cv.pdf" download class="btn btn2"
               >Download Resume</a
@@ -264,17 +266,17 @@
       const scriptURL =
         "https://script.google.com/macros/s/AKfycbyRetiPmu_eQselIavFGj_OWyJG955CFvIT3cyBjGrw4mCWQIt8WJnNjHQYTrEtQEFk/exec";
       const form = document.forms["submit-to-google-sheet"];
-      const msg=document.getElementById("msg");
+      const msg = document.getElementById("msg");
 
       form.addEventListener("submit", (e) => {
         e.preventDefault();
         fetch(scriptURL, { method: "POST", body: new FormData(form) })
           .then((response) => {
-            msg.innerHTML="Message Sent Successfully"
-            setTimeout(function(){
-              msg.innerHTML=""
-            },5000)
-            form.reset()
+            msg.innerHTML = "Message Sent Successfully";
+            setTimeout(function () {
+              msg.innerHTML = "";
+            }, 5000);
+            form.reset();
           })
           .catch((error) => console.error("Error!", error.message));
       });
